# platypose

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
chick/: chick.py  config.py  energies.py  heatmap.py  pipeline.py  platform.py  projection.py
chick/data_loaders/: get_data.py  tensors.py
chick/dataset/: generator.py  h36m.py  mocap_dataset.py  temporal.py
chick/diffusion/: fp16_util.py  gaussian_diffusion.py
chick/model/: cae.py  cvae.py  lifting.py  mdm.py  overcomplete.py  smpl.py  transformer.py
chick/sample/: edit.py  generate.py
chick/train/: train_mdm.py  train_platforms.py  training_loop.py
chick/utils/: misc.py  model_util.py  palettes.py  parser_util.py  plot_utils.py  rotation_conversions.py  types.py  wandb.py
common/: camera.py  h36m_dataset.py  load_data_hm36.py  opt.py  utils.py
configs/: base.yaml
experiments/: 128_frame.yaml  256_frame.yaml  30_frame.yaml  32_frame_random.yaml  3dhp.yaml  3dpw.yaml  base.yaml  dynamic_frames.yaml  dynamic_frames_256.yaml  h36m.yaml  single_frame.yaml
models/: w32_256x256_adam_lr1e-3.yaml
notebooks/: dummy_performance.ipynb  simplified_problem.ipynb
platypose/: config.py  energies.py  heatmap.py  pipeline.py  projection.py
platypose/dataset/: generator.py  h36m.py  skeleton.py  temporal.py
platypose/diffusion/: fp16_util.py  gaussian_diffusion.py  nn.py  respace.py
platypose/model/: cfg_sampler.py  cvae.py  encoder.py  lifting.py  mdm.py  overcomplete.py  rotation2xyz.py  simplebaseline.py
platypose/train/: training_loop.py
platypose/utils/: fixseed.py  model_util.py  palettes.py  plot_utils.py  (+2 more)
propose/: .gitignore  Dockerfile  README.md  docker-compose.yml
scripts/: create_3dhp_dataset.py  create_3dpw_dataset.py  create_dataset.py  eval.py  eval_gd.py  eval_heatmap.py  eval_old.py  evaluate.py  old_eval.py  train.py  train_projection_model.py  visualize.py  wehrbein.py
(+85 files in other folders)
