[tool.poetry]
name = "chick"
version = "0.1.0"
description = "Diffusion based pose lifting"
authors = ["paul <ppierzc@gmail.copm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
yacs = "^0.1.8"
appnope = "^0.1.3"
asttokens = "^2.2.1"
backcall = "^0.2.0"
blobfile = "^2.0.2"
certifi = "^2023.5.7"
charset-normalizer = "^3.1.0"
cycler = "^0.11.0"
decorator = "^5.1.1"
einops = "^0.6.1"
executing = "^1.2.0"
filelock = "^3.12.0"
filterpy = "^1.4.5"
ftfy = "^6.1.1"
idna = "^3.4"
imageio = "^2.30.0"
ipython = "^8.13.2"
jedi = "^0.18.2"
kiwisolver = "^1.4.4"
llvmlite = "^0.40.0"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
matplotlib-inline = "^0.1.6"
networkx = "^3.1"
numba = "^0.57.0"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
packaging = "^23.1"
parso = "^0.8.3"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = "^9.5.0"
prompt-toolkit = "^3.0.38"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pycryptodomex = "^3.18.0"
Pygments = "^2.15.1"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
PyWavelets = "^1.4.1"
PyYAML = "^6.0"
regex = "^2023.5.5"
requests = "^2.31.0"
scikit-image = "^0.21.0"
scipy = "^1.10.1"
six = "^1.16.0"
stack-data = "^0.6.2"
tifffile = "^2023.4.12"
timm = "^0.9.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
tqdm = "^4.65.0"
traitlets = "^5.9.0"
typing-extensions = "^4.6.3"
urllib3 = "^2.0.2"
wcwidth = "^0.2.6"
lipstick = "^0.0.7"
wandb = "^0.15.3"
h5py = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
